
  Error.pm #0.17006
  - t/11rethrow.t - added the test file by Thomas Equeter.
  - Changed to the more correct behevaiour that fixes the rethrowning
  error by Thomas Equeter.
  - see http://rt.cpan.org/Public/Bug/Display.html?id=21612
  - added t/pod.t to check for POD validity.
  - added the t/pod-coverage.t file for POD coverage.
    - added the missing POD.

Oct 03 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17005
  - t/09dollar-at.t - included in the distribution (it was not placed in
  the MANIFEST previously.
  - t/10throw-in-catch.t, t/Error.pm - Fixed:
    http://rt.cpan.org/Public/Bug/Display.html?id=21884 when an error that
    was thrown inside a catch or otherwise clause was not registered. 

Sep 01 2006 <leonerd@leonerd.org.uk> (Paul Evans)

  Error.pm #0.17004
  - t/08warndie.t: Various fixes:
    Workaround for ActivePerl bug when dup2()ing to STDERR - close it first
      Should fix https://rt.cpan.org/Public/Bug/Display.html?id=21080 but I
      have no means to test it
    Use __LINE__ rather than a custom function implemented using caller()

Aug 20 2006 <leonerd@leonerd.org.uk> (Paul Evans)

  Error.pm #0.17003
  - Pass error in $@ as well as $_[0] to catch and otherwise blocks.
  - t/08warndie.t: Various fixes for Win32:
    Win32 can't open( HANDLE, "-|" ) - need manual pipe()/fork() workaround
    Filename on Win32 is t\08warndie.t - need \Q in regexp to avoid
      interpretation as an invalid octal character

Aug 17 2006 <leonerd@leonerd.org.uk> (Paul Evans)

  Error.pm #0.17002
  - Documentation fix for Error::Simple constructor in example
  - t/80warndie.t: Bugfix to open() call to work on perl 5.6

Jul 24 2006 <leonerd@leonerd.org.uk> (Paul Evans)

  Error.pm #0.17001
  - Bugfix to t/08warndie.t - Don't abuse $! for forcing "die"'s exit status
    Fixes http://rt.cpan.org/Public/Bug/Display.html?id=20549

Jul 13 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17
  - Added some examples to the examples/ directory.